--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app,.movie{
+  margin: 5px;
+  padding: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.searchCom{
+text-align: center;
+margin: 20px;
 }
+.searchText{
+margin: 3px;
+  width: 50%;
+  font-size: large;
+  padding:  5px;
+}
+.searchBtn{
+  margin: 3px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-size: large;
+  padding:  5px;
+}
+.movie{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  flex-wrap: wrap;
+  justify-content: space-around;
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
